payment html some changes

--- a/cmd/payment.html
+++ b/cmd/payment.html
@@ -80,12 +80,12 @@
 
   $.ajax({
     //passes details as url params
-    url: `http://localhost:8080/payment/verify?user_id=${userid}&payment_ref=${res.razorpay_payment_id}&order_id=${orderData}&signature=${res.razorpay_signature}&id=${orderid}&total=${total}&plan_id=${planId}`,
+    url: `https://pholap.online/payment/verify?user_id=${userid}&payment_ref=${res.razorpay_payment_id}&order_id=${orderData}&signature=${res.razorpay_signature}&id=${orderid}&total=${total}&plan_id=${planId}`,
     method: 'GET',
     success: (response) => {
       console.log(response);
       if (response.data) {
-        location.href = 'http://localhost:8080/payment/verified';
+        location.href = 'https://pholap.online/payment/verified';
       }
     }
   });
